--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "botName": "tolol v2-Mdོ ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
-    "pathimg": "./media/Haruka.jpg",
+    "pathimg": "./media/IMG-20220725-WA0029.jpg",
     "BotKey": "V12",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
@@ -14,7 +14,7 @@
     "autorespond": false,
     "autoblok": false,
     "gamewaktu": 90,
-    "limitCount": 25,
+    "limitCount": 50,
     "gcount": {
         "prem": 1000,
         "user": 15
